kubernetes/apps/platform/pihole-proxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.lab.ryantaylor.tech`)
      services:
        - name: pihole
          port: 80
  tls: {}
